# swagger.json
@@ -27,9 +27,25 @@
     "/products": {
       "get": {
         "summary": "List all products",
-        "tags": ["product"],
+        "tags": [
+          "product"
+        ],
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "from",
+            "type": "integer",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "to",
+            "type": "integer",
+            "in": "query",
+            "required": false
+          }
         ],
         "responses": {
           "200": {
@@ -41,7 +57,9 @@
     "/products/{id}": {
       "get": {
         "summary": "Get details of a product",
-        "tags": ["product"],
+        "tags": [
+          "product"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -66,7 +84,9 @@
     "/products/search/{query}": {
       "get": {
         "summary": "Get all products which contains the query in their description",
-        "tags": ["product"],
+        "tags": [
+          "product"
+        ],
         "description": "Checks if the description of the product contains the query -> ⚠️ object.description.contains(query)⚠️",
         "parameters": [
           {
@@ -74,6 +94,18 @@
             "type": "string",
             "in": "path",
             "required": true
+          },
+          {
+            "name": "from",
+            "type": "integer",
+            "in": "query",
+            "required": false
+          },
+          {
+            "name": "to",
+            "type": "integer",
+            "in": "query",
+            "required": false
           }
         ],
         "produces": [
@@ -89,7 +121,9 @@
     "/price/{id}": {
       "get": {
         "summary": "Get price of a product",
-        "tags": ["pricing"],
+        "tags": [
+          "pricing"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -113,7 +147,9 @@
     },
     "/add-to-cart": {
       "post": {
-        "tags": ["not ready"],
+        "tags": [
+          "not ready"
+        ],
         "responses": {
           "501": {
             "description": "Coming Soon"
@@ -123,7 +159,9 @@
     },
     "/cart/{id}": {
       "get": {
-        "tags": ["not ready"],
+        "tags": [
+          "not ready"
+        ],
         "responses": {
           "501": {
             "description": "Coming Soon"
@@ -133,7 +171,9 @@
     },
     "/user": {
       "get": {
-        "tags": ["not ready"],
+        "tags": [
+          "not ready"
+        ],
         "responses": {
           "501": {
             "description": "Coming Soon"
@@ -143,7 +183,9 @@
     },
     "/login": {
       "post": {
-        "tags": ["not ready"],
+        "tags": [
+          "not ready"
+        ],
         "responses": {
           "501": {
             "description": "Coming Soon"
